--- a/project-1.html
+++ b/project-1.html
@@ -85,7 +85,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="#" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="./project-1.html#links" class="btn btn--bg" target="_blank">Live Link</a>
         </div>
       </div>
     </section>
@@ -124,16 +124,27 @@
                 <div class="skills__skill">GIT</div>
               </div>
             </div>
-            <div class="project-details__links">
-              <h3 class="project-details__content-title">See Live</h3>
-              <a
-                href="#"
-                class="btn btn--med btn--theme project-details__links-btn"
-                target="_blank"
-                >Live Link</a
-              >
-              <span class="btn btn--med btn--theme-inv project-details__links-btn">Code Link (unavailable)</span>
-            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="links" class="project-details">
+      <div class="main-container">
+        <div class="project-links__content">
+          <div class="project-links__content-main">
+            <h3 class="project-details__content-title">See Live</h3>
+            <a
+              href="#"
+              class="btn btn--med btn--theme project-details__links-btn"
+              target="_blank"
+              >Live Link</a
+            >
+            <a
+              href="https://github.com/ExplosiveMine/BedrockMiner"
+              class="btn btn--med btn--theme-inv project-details__links-btn"
+              target="_blank"
+              >Code Link (unavailable)</a
+            >
           </div>
         </div>
       </div>
