--- a/project-3.html
+++ b/project-3.html
@@ -84,7 +84,7 @@
           </p>
         </div>
         <div class="project-cs-hero__cta">
-          <a href="./project-3.html#links" class="btn btn--bg" target="_blank">Live Link</a>
+          <a href="./project-3.html#links" class="btn btn--bg">Live</a>
         </div>
       </div>
     </section>
@@ -127,7 +127,6 @@
             <a
               href="#"
               class="btn btn--med btn--theme project-details__links-btn"
-              target="_blank"
               >Live Link</a
             >
             <a
