--- a/project-1.html
+++ b/project-1.html
@@ -138,11 +138,9 @@
               class="btn btn--med btn--theme project-details__links-btn"
               >Live Link</a
             >
-            <a
-              href="#"
+            <div
               class="btn btn--med btn--theme-inv project-details__links-btn"
-              target="_blank"
-              >Code Link (unavailable)</a
+              >Code Link (unavailable)</div
             >
           </div>
         </div>
