--- a/project-2.html
+++ b/project-2.html
@@ -124,6 +124,7 @@
       <div class="main-container">
         <div class="project-links__content">
           <div class="project-links__content-main">
+            <h3 class="project-details__content-title">See Live</h3>
             <img src="./assets/gif/bedrock_miner.gif" alt="live gif" class="project-links__showcase-gif">
             <a
               href="https://github.com/ExplosiveMine/BedrockMiner"
