--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <h2 class="heading heading-sec heading-sec__mb-bg">
           <span class="heading-sec__main">Projects</span>
           <span class="heading-sec__sub">
-            This is some of my best work
+            Some of my recent projects
           </span>
         </h2>
 
