--- a/project-2.html
+++ b/project-2.html
@@ -104,9 +104,9 @@
               <h3 class="project-details__content-title">Project Overview</h3>
               <p class="project-details__desc-para">
                 By listening to block interactions and broadcasting packets to
-                every nearby player, we can display and increment the stage of
-                the block breaking animation. Hence, the plugin accurately
-                simulates actually breaking the block
+                every nearby player, we can display and increment the block
+                breaking animation stage. Hence, the plugin can accurately
+                simulate breaking any block while varying the mining speed.
               </p>
             </div>
             <div class="project-details__tools-used">
