--- a/project-2.html
+++ b/project-2.html
@@ -109,7 +109,7 @@
                 simulate breaking any block while varying the mining speed.
               </p>
             </div>
-            <div class="project-details__tools-used">
+            <div>
               <h3 class="project-details__content-title">Tools Used</h3>
               <div class="skills">
                 <div class="skills__skill">Java</div>
@@ -120,7 +120,7 @@
         </div>
       </div>
     </section>
-    <section id="links" class="project-details">
+    <section id="links" class="links sec-pad">
       <div class="main-container">
         <div class="project-links__content">
           <div class="project-links__content-main">
