--- a/project-2.html
+++ b/project-2.html
@@ -120,7 +120,7 @@
         </div>
       </div>
     </section>
-    <section id="links" class="links sec-pad">
+    <section id="links" class="links project-sec-pad">
       <div class="main-container">
         <div class="project-links__content">
           <div class="project-links__content-main">
